Name: jmvOptions
Version: 0.2
Cabal-Version: >= 1.8
Author: Juan Miguel Vilar
Maintainer: jvilar@uji.es
Stability: alpha
Synopsis: A helper for writing the list of options descriptions for System.Console.GetOpt
Build-Type: Simple

Library
  Exposed-Modules: System.Console.JMVOptions
  Build-Depends: base, containers, mtl, text
  ghc-options: -Wall
